--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ theme-color: indigo # indigo|yellow|pink|green|stone|
 # homepage information
 author: Sami Elsayed
 author-bio: Student and Sysadmin  # change to false to hide
-author-image: 279.png  # file must be in the /assets/img/ folder
+author-image: 241408005_551143766213964_3907764800601857433_n.jpg  # file must be in the /assets/img/ folder
 
 # navigation menu
 show-nav-menu: true
