fix: update social media links

--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ nav-menu:
 
 # use false to turn off any social media links
 twitter: false
-facebook: https://facebook.com/samielsayedtj
-instagram: https://instagram.com/samielsayedtj
+facebook: https://facebook.com/samieelsayed
+instagram: https://instagram.com/samieelsayed
 github: https://github.com/selsayed25
 linkedin: false
 medium: false
