add: added mastodon

--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ instagram: https://instagram.com/samieelsayed
 github: https://github.com/selsayed25
 linkedin: false
 medium: false
+mastodon: https://mastodon.social/@elsayed
 google-scholar: false
 email: mailto:2025selsayed@tjhsst.edu
 
